# iccs-summer-school-hackathon

./: .gitignore  README.md  pylock.toml  pyproject.toml
data/: l96_obs.nc
pdaf-code/: L96_emulator.ts  README.md  ftorch_load.f90
pdaf-code/make.arch/: linux_gfortran.h
pdaf-code/models/lorenz96/: lorenz_96  state.nc
python/: L96_emulator.pt  L96_model.py  L96_training.py  generate_obs_l96.py  pt2ts.py
